Fix overflow margin problem

--- a/resources/css/bootstrap-kikcms.scss
+++ b/resources/css/bootstrap-kikcms.scss
@@ -76,5 +76,7 @@ textarea.form-control{
 }
 
 .form-group{
-    overflow: hidden;
+    padding-top: 1px;
+    padding-bottom: 1px;
+    margin-bottom: 12px;
 }
